--- a/src/modules/lazy/lazy.scss
+++ b/src/modules/lazy/lazy.scss
@@ -20,7 +20,12 @@
   border: 4px solid var(--swiper-preloader-color, var(--swiper-theme-color));
   border-radius: 50%;
   border-top-color: transparent;
-  animation: swiper-preloader-spin 1s infinite linear;
+}
+.swiper:not(.swiper-watch-progress),
+.swiper-watch-progress .swiper-slide-visible {
+  .swiper-lazy-preloader {
+    animation: swiper-preloader-spin 1s infinite linear;
+  }
 }
 
 .swiper-lazy-preloader-white {
